k8s/currency-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-deployment
  namespace: currency-app
  labels:
    app: currency
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency
  template:
    metadata:
      labels:
        app: currency
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers: # converted from docker-compose.yml via kompose
        - image: belyaevedu/restapi-currency:v1.0.1@sha256:a3d4915ac613e8b0973e9428b18db28395052983f9c8cd94c005fca0acc0684a
          name: restapi-currency
          ports:
            - containerPort: 8000
              protocol: TCP
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - mountPath: /app/server/logs
              name: currency-logs
            - mountPath: /app/requester/cache
              name: restapi-currency-tmpfs0
            - mountPath: /tmp
              name: restapi-currency-tmpfs1
      restartPolicy: Always
      volumes:
        - name: currency-logs
          hostPath:
            path: /var/log/currency
            type: DirectoryOrCreate
        - emptyDir:
            medium: Memory
          name: restapi-currency-tmpfs0
        - emptyDir:
            medium: Memory
          name: restapi-currency-tmpfs1
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - currency
            topologyKey: "kubernetes.io/hostname"
