k8s/currency-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  namespace: currency-app
spec:
  selector:
    app: currency
  ports:
    - port: 8000
      targetPort: 8000
