k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-ingress
  namespace: currency-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - currency.belyaev.work
      secretName: currency-tls
  rules:
    - host: currency.belyaev.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: currency-service
                port:
                  number: 8000
